update gitingnore to include test

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 data/raw/train.csv
+data/raw/predictions.csv
 notebooks/drh382/*.csv
 data/processed/dev/ac4119_*.csv
 data/processed/dev/ac4119_*.pkl
+data/raw/test_no_label.csv
